--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ font pango:Hack 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st -e tmux
+bindsym $mod+Return exec st -e tmux -2
 
 # kill focused window
 bindsym $mod+Shift+q kill
