--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -11,13 +11,14 @@ general {
         interval = 5
 }
 
-order += "ipv6"
+#order += "ipv6"
 order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPN"
+#order += "run_watch DHCP"
+#order += "run_watch VPN"
 order += "wireless _first_"
-order += "ethernet _first_"
+#order += "ethernet _first_"
 order += "battery 0"
+order += "volume master"
 order += "load"
 order += "tztime local"
 
@@ -54,4 +55,11 @@ load {
 
 disk "/" {
         format = "%avail"
+}
+
+volume master {
+	format = "V: %volume"
+	device = "default"
+	mixer = "Master"
+	mixer_idx = 0
 }
