--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,10 @@ font pango:Hack 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st -e tmux -2
+bindsym $mod+Return exec st 
+
+# start pulseaudio 
+exec --no-startup-id i3-msg 'exec /usr/bin/pulseaudio --start'
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -90,7 +93,7 @@ bindsym $mod+a focus parent
 
 # switch to workspace
 bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
+bindsym $mod+2 workspace 2 
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
@@ -148,7 +151,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status -c ~/.i3/i3status.conf
         tray_output primary
 }
 
