--- a/tmux.conf
+++ b/tmux.conf
@@ -73,3 +73,18 @@ bind -r L resize-pane -R 10
 # set vi mode for copy mode
 setw -g mode-keys vi
 
+# Toggle mouse on with ^B m
+bind m \
+	set -g mode-mouse on \;\
+	set -g mouse-resize-pane on \;\
+	set -g mouse-select-pane on \;\
+	set -g mouse-select-window on \;\
+	display 'Mouse: ON'
+
+# Toggle mouse off with ^B M
+bind M \
+	set -g mode-mouse off \;\
+	set -g mouse-resize-pane off \;\
+	set -g mouse-select-pane off \;\
+	set -g mouse-select-window off \;\
+	display 'Mouse: OFF'
