--- a/50-cros-touchpad.conf
+++ b/50-cros-touchpad.conf
@@ -1,3 +1,9 @@
+#C720 touchpad configuration
+
+#in UBUNTU
+#place this file in /usr/share/X11/xorg.conf.d/50-cros-touchpad.conf
+#then restart 
+
 Section "InputClass" 
     Identifier      "touchpad peppy cyapa" 
     MatchIsTouchpad "on" 
