--- a/i3/config
+++ b/i3/config
@@ -31,7 +31,9 @@ font pango:Hack 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec gnome-terminal
+bindsym $mod+i exec firefox
+bindsym $mod+shift+x exec i3lock
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -93,29 +95,43 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+#"FireFox"
+set $workspace1   "1: " 
+#"Terminal"
+set $workspace2   "2: "
+#"Messages"
+set $workspace3   "3: " 
+#"Torrents"
+set $workspace10 "10: " 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
+bindsym $mod+1 workspace $workspace1
+bindsym $mod+2 workspace $workspace2
+bindsym $mod+3 workspace $workspace3 
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+1 move container to workspace $workspace1
+bindsym $mod+Shift+2 move container to workspace $workspace2
+bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+0 move container to workspace $workspace10
+
+
+assign [class="Firefox"] $workspace1
+#assign [class="TelegramDesktop"] $workspace3
+assign [class="Thunderbird"] $workspace3
+
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -157,3 +173,5 @@ bar {
 }
 
 exec --no-startup-id "pulseaudio --start"
+
+exec_always feh --bg-scale /home/jared/Pictures/CandJBackground.png 
