--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 source-file ~/dotfiles/tmuxline.conf
 # tmux display things in 256 colors
 set -g default-terminal "screen-256color"
-set -g status-utf8 on
+#set -g status-utf8 on
 
 set -g history-limit 20000
 
@@ -75,16 +75,10 @@ setw -g mode-keys vi
 
 # Toggle mouse on with ^B m
 bind m \
-	set -g mode-mouse on \;\
-	set -g mouse-resize-pane on \;\
-	set -g mouse-select-pane on \;\
-	set -g mouse-select-window on \;\
+	set -g mouse on \;\
 	display 'Mouse: ON'
 
 # Toggle mouse off with ^B M
 bind M \
-	set -g mode-mouse off \;\
-	set -g mouse-resize-pane off \;\
-	set -g mouse-select-pane off \;\
-	set -g mouse-select-window off \;\
+	set -g mouse off \;\
 	display 'Mouse: OFF'
