--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,11 +13,11 @@ general {
 
 #order += "ipv6"
 order += "disk /"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
-order += "wireless _first_"
+order += "run_watch DHCP"
+order += "run_watch VPN"
+#order += "wireless _first_"
 order += "ethernet _first_"
-order += "battery 0"
+#order += "battery 0"
 order += "volume master"
 order += "load"
 order += "tztime local"
@@ -29,8 +29,8 @@ wireless _first_ {
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = " E: %ip (%speed)"
+        format_down = " E: down"
 }
 
 battery 0 {
@@ -58,8 +58,10 @@ disk "/" {
 }
 
 volume master {
-	format = "V: %volume"
+	format = ": %volume"
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
 }
+
+
