--- a/tmux.conf
+++ b/tmux.conf
@@ -74,11 +74,23 @@ bind -r L resize-pane -R 10
 setw -g mode-keys vi
 
 # Toggle mouse on with ^B m
-bind m \
-	set -g mouse on \;\
-	display 'Mouse: ON'
-
+#bind m \
+#	set -g mouse on \;\
+#	display 'Mouse: ON'
+#
 # Toggle mouse off with ^B M
-bind M \
-	set -g mouse off \;\
-	display 'Mouse: OFF'
+#bind M \
+#	set -g mouse off \;\
+#	display 'Mouse: OFF'
+set -g mouse on
+
+
+#Tmux Plugin Manager 
+#install with git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
