--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # synchronize all panes in a window
-bind y setw synchronize-panes
+bind C-s setw synchronize-panes
 
 # pane movement shortcuts
 bind h select-pane -L
@@ -91,7 +91,5 @@ set -g mouse on
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
