--- a/tmux.conf
+++ b/tmux.conf
@@ -43,6 +43,8 @@ set-option -g set-titles-string "#T - #W"
 #### Key Bindings ####
 ######################
 
+bind y setw synchronize-panes
+
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
@@ -52,9 +54,6 @@ bind N new-window
 # split window and fix path for tmux 1.9
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
-
-# synchronize all panes in a window
-bind C-s setw synchronize-panes
 
 # pane movement shortcuts
 bind h select-pane -L
@@ -73,6 +72,10 @@ bind -r L resize-pane -R 10
 
 # set vi mode for copy mode
 setw -g mode-keys vi
+
+#fix copy/paste clipboard issue
+bind-key -t vi-copy y copy-pipe "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 # Toggle mouse on with ^B m
 #bind m \
