--- a/conky.conf
+++ b/conky.conf
@@ -38,7 +38,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     use_xft = true,
-    font = 'DejaVu Sans Mono:size=12',
+    font = 'DejaVu Sans Mono:size=10',
     gap_x = 10,
     gap_y = 10,
     net_avg_samples = 2,
@@ -56,7 +56,8 @@ conky.config = {
     use_spacer = 'none',
     show_graph_scale = false,
     show_graph_range = false,
-	override_utf8_locale = true
+	override_utf8_locale = true,
+	maximum_width = 600
 }
 
 conky.text = [[
@@ -80,8 +81,9 @@ conky.text = [[
 #${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
 #${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
 #${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
-${alignc}Weather
-${voffset -8}$hr${voffset 10}
+
+#${alignc}Weather
+#${voffset -8}$hr${voffset 10}
 ${color grey}${exec cat /tmp/weather | sed -n '1p' | cut -c 1-15} $alignr $color ${exec cat /tmp/weather | sed -n '1p' | cut -c 16-30 | xargs}
 ${color grey}${exec cat /tmp/weather | sed -n '2p' | cut -c 1-15} $alignr $color ${exec cat /tmp/weather | sed -n '2p' | cut -c 16-30 | xargs}
 ${color grey}${exec cat /tmp/weather | sed -n '3p' | cut -c 1-15} $alignr $color ${exec cat /tmp/weather | sed -n '3p' | cut -c 16-30 | xargs}
@@ -91,10 +93,16 @@ ${color grey}${exec cat /tmp/weather | sed -n '6p' | cut -c 1-15} $alignr $color
 ${voffset -50}${execi 300 curl -4 wttr.in | sed -n '3,7p' | perl -pe 's/\e\[?.*?[\@-~]//g' > /tmp/weather}
 ${voffset -10}
 
-
 ${time %a %B %e, %l:%M:%S %p}
 $hr
-${execpi 300 gcalcli --conky --nolineart --color_border black --color_date white --color_now_marker red --color_owner green --width 1 agenda}
-#${execpi 300 gcalcli --conky --nolineart --color_border black --color_date white --color_now_marker red --color_owner green  --width 13 calw 1}
 
+
+${color lightblue}Todo:
+$hr
+${color lightblue}${execpi 300 habitica todos}
+
+${color lightgreen}Dailies:
+$hr
+${color lightgreen}${execpi 300 habitica dailies}
+${execpi 300 gcalcli --conky --nolineart --color_border black --color_date white --color_now_marker red --color_owner green  --width 10 calw 1}
 ]]
