--- a/i3/config
+++ b/i3/config
@@ -190,14 +190,17 @@ bar {
 
 
 # Autostart
-exec --no-startup-id "pulseaudio --start"
-exec compton
-exec_always --no-startup-id "albert"
+exec --no-startup-id compton
+#exec_always --no-startup-id "albert"
 exec_always --no-startup-id xautolock -locker ~/dotfiles/i3/lock.sh
 exec_always feh --bg-scale /home/jared/Documents/backgrounds/galaxy.png 
 #exec_always feh --bg-scale /home/jared/Documents/backgrounds/vim.png 
 #exec_always feh --bg-scale /home/jared/Andromeda.jpe 
 
+# Audio
+exec --no-startup-id "pulseaudio --start"
+#bindsys XF86AudioRaiseVolume exec --nostartup-id 
+#bindsys XF86AudioLowerVolume 
 
 client.focused #dcdccc #dcdccc #3c3b37 #ffcfaf
 client.focused_inactive #3c3b37 #3c3b37 #7f9f7f #3c3b37
@@ -210,6 +213,7 @@ hide_edge_borders smart
 
 for_window [class="Gnome-terminal"] border pixel 3
 for_window [class="Firefox"] border pixel 3
+for_window [class="Steam"] floating enable
 
 #gaps inner 15
 #gaps outer 0
