--- a/tmux.conf
+++ b/tmux.conf
@@ -74,8 +74,11 @@ bind -r L resize-pane -R 10
 setw -g mode-keys vi
 
 #fix copy/paste clipboard issue
-bind-key -t vi-copy y copy-pipe "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+#bind-key -t vi-copy y copy-pipe "xsel -i -p && xsel -o -p | xsel -i -b"
+#bind-key C-p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+
+bind-key -n -t vi-copy y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
+bind-key -n C-v run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 
 # Toggle mouse on with ^B m
 #bind m \
