--- a/tmux.conf
+++ b/tmux.conf
@@ -78,7 +78,7 @@ setw -g mode-keys vi
 #bind-key C-p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 bind-key -n -t vi-copy y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
-bind-key -n C-v run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
+bind-key -r C-v run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 
 # Toggle mouse on with ^B m
 #bind m \
