--- a/tmux.conf
+++ b/tmux.conf
@@ -91,6 +91,7 @@ bind-key -n C-v run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 #	display 'Mouse: OFF'
 set -g mouse on
 
+set-option -g status-right "#(cat /tmp/gtd)#[fg=colour15,noreverse,bg=colour233] #(date '+%a %m/%d %I:%M %P') "
 
 #Tmux Plugin Manager 
 #install with git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
