--- a/i3/config
+++ b/i3/config
@@ -6,7 +6,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack 11
+font pango:Hack 15
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -26,15 +26,15 @@ floating_modifier $mod
 #Application Bindings 
 
 # Terminal (mod+Enter)
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec st
 # Firefox (mod+i)
 bindsym $mod+i exec firefox
 
 # Application Launcher (mod+d)
 #bindsym $mod+d exec --no-startup-id "albert toggle"
-#bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec --no-startup-id rofi -show run
-bindsym $mod+Tab exec --no-startup-id rofi -show window 
+bindsym $mod+d exec --no-startup-id dmenu_run
+#bindsym $mod+d exec --no-startup-id rofi -show run
+#bindsym $mod+Tab exec --no-startup-id rofi -show window 
 
 #Lock Screen (mod+shift+x)
 bindsym $mod+shift+x exec ~/.i3/lock.sh
@@ -209,7 +209,7 @@ client.urgent #dca3a3 #dca3a3 #dcdccc #3c3b37
 
 
 #hide edge borders on workspaces with only 1 visible window
-hide_edge_borders smart
+#hide_edge_borders smart
 
 for_window [class="Gnome-terminal"] border pixel 3
 for_window [class="Firefox"] border pixel 3
