--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,18 +13,18 @@ general {
 
 #order += "ipv6"
 order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPN"
-#order += "wireless _first_"
-order += "ethernet _first_"
-#order += "battery 0"
+#order += "run_watch DHCP"
+#order += "run_watch VPN"
+order += "wireless _first_"
+#order += "ethernet _first_"
+order += "battery 0"
 order += "volume master"
-order += "load"
+#order += "load"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "W:(%quality at %essid)"
+        format_down = "W: down"
 }
 
 ethernet _first_ {
