fixed errors in tmuxline.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,8 +77,8 @@ setw -g mode-keys vi
 #bind-key -t vi-copy y copy-pipe "xsel -i -p && xsel -o -p | xsel -i -b"
 #bind-key C-p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
-bind-key -n -t vi-copy y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
-bind-key -r C-v run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
+#bind-key -n -t vi-copy y copy-pipe "xclip -i -sel p -f | xclip -i -sel c "
+#bind-key -r C-v run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 
 # Toggle mouse on with ^B m
 #bind m \
