updated tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,9 +22,6 @@ setw -g aggressive-resize on
 # make delay shorter
 set -sg escape-time 0
 
-# tile all windows
-unbind =
-bind = select-layout tiled
 
 # cycle through panes
 # unbind C-a
@@ -44,6 +41,8 @@ set-option -g set-titles-string "#T - #W"
 ######################
 
 bind y setw synchronize-panes
+
+bind S swap-pane
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
@@ -91,12 +90,13 @@ setw -g mode-keys vi
 #	display 'Mouse: OFF'
 set -g mouse on
 
-set-option -g status-right "#(cat /tmp/gtd)#[fg=colour15,noreverse,bg=colour233] #(date '+%a %m/%d %I:%M %P') "
+set-option -g status-right "#{battery_color_charge_bg}#{battery_percentage} #{battery_icon} #[fg=colour15,noreverse,bg=colour233] #(date '+%a %m/%d %I:%M %P') "
 
 #Tmux Plugin Manager 
 #install with git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
+set -g @plugin 'tmux-plugins/tmux-battery'
 run '~/.tmux/plugins/tpm/tpm'
+
